--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,3 +4,4 @@
 @import url('layout/grid.css');
 @import url('layout/hero.css');
 @import url('utils/animations.css');
+@import url('components/cards.css')
