--- a/src/css/other/rafale_page.css
+++ b/src/css/other/rafale_page.css
@@ -1,4 +1,3 @@
-/* Style global */
 body {
     font-family: Arial, sans-serif;
     background-color: #121212;
@@ -8,7 +7,7 @@ body {
 }
 .card-container {
     display: flex;
-    flex-wrap: wrap; /* Permettre un alignement flexible */
+    flex-wrap: wrap;
     justify-content: space-between;
     gap: 20px;
     padding: 20px;
@@ -16,14 +15,14 @@ body {
     margin: 0 auto;
 }
 
-/* Faire en sorte que la carte avec le texte prenne toute la largeur */
+/* Prend toutes la largeur*/
 .card.paragraph-card {
-    grid-column: span 2; /* S'étend sur les deux colonnes */
-    width: 100%; /* Pour assurer que la carte occupe toute la largeur */
+    grid-column: span 2; /* sur les deux colonnes */
+    width: 100%; /* carte occupe toute la largeur */
 }
 
 
-/* Style des cartes */
+/* Style cartes */
 .card {
     background-color: #1f1f1f;
     border-radius: 10px;
@@ -34,20 +33,18 @@ body {
     transition: box-shadow 0.3s ease-in-out;
 }
 
-/* Effet lumineux sur survol */
+/* effet lumineux  */
 .card:hover {
     box-shadow: 0 0 15px #002153;
 }
 
-/* Style pour l'image */
+/* pour l'image */
 .card img {
     max-width: 100%;
     border-radius: 8px;
     display: block;
     margin: 0 auto;
 }
-
-/* Style pour les titres et paragraphes */
 .card h2 {
     font-size: 24px;
     margin-bottom: 20px;
